Updated the scheduler to be more transparent and change the c2p scheduling.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -967,6 +967,7 @@
     "#endif\n",
     "          // Now that tildeS_i has been fixed, let's compute tildeS^i:\n",
     "          CCTK_REAL mhd_st_upx = gupxxL*StildeD0L + gupxyL*StildeD1L + gupxzL*StildeD2L;\n",
+    "          //printf(\"ValenciavU0 = %e\\n\",mhd_st_upx);\n",
     "          CCTK_REAL mhd_st_upy = gupxyL*StildeD0L + gupyyL*StildeD1L + gupyzL*StildeD2L;\n",
     "          CCTK_REAL mhd_st_upz = gupxzL*StildeD0L + gupyzL*StildeD1L + gupzzL*StildeD2L;\n",
     "\n",
@@ -1082,7 +1083,7 @@
     "            }\n",
     "          }\n",
     "#endif\n",
-    "          ValenciavU0[index] = ValenciavU0L;      \n",
+    "          ValenciavU0[index] = ValenciavU0L;\n",
     "          ValenciavU1[index] = ValenciavU1L;      \n",
     "          ValenciavU2[index] = ValenciavU2L;      \n",
     "            \n",
@@ -1742,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1776,8 @@
     "#  OPTIONS: global\n",
     "#} \"Schedule symmetries\"\n",
     "\n",
-    "schedule GiRaFFE_HO_set_prereqs as GiRaFFE_HO_set_prereqs IN MoL_CalcRHS\n",
+    "# Sets the gridfunctions that are needed for RHS; GiRaFFE_HO_set_rhs will need these to be set so it can finite-difference them\n",
+    "schedule GiRaFFE_HO_set_GFs_to_finite_difference_for_RHs as GiRaFFE_HO_set_GFs_to_finite_difference_for_RHS IN MoL_CalcRHS\n",
     "{\n",
     "  LANG: C\n",
     "  READS: admbase::alp(Everywhere)\n",
@@ -1815,7 +1817,7 @@
     "  SYNC: GiRaFFE_aux\n",
     "} \"Sets prerequisite quantities for the GiRaFFE right-hand sides\"\n",
     "\n",
-    "schedule GiRaFFE_HO_set_rhs as GiRaFFE_HO_Evolution IN MoL_CalcRHS after GiRaFFE_HO_set_prereqs\n",
+    "schedule GiRaFFE_HO_set_rhs as GiRaFFE_HO_Evolution IN MoL_CalcRHS after GiRaFFE_HO_set_GFs_to_finite_difference_for_RHs\n",
     "{\n",
     "  LANG: C\n",
     "  READS: admbase::alp(Everywhere)\n",
@@ -1871,6 +1873,26 @@
     "\n",
     "schedule GROUP ApplyBCs as GiRaFFE_HO_ApplyBCs in MoL_PostStep after GiRaFFE_HO_SelectBCs\n",
     "{\n",
+    "  READS: GiRaFFE_HO::AD0(Interior)\n",
+    "  READS: GiRaFFE_HO::AD1(Interior)\n",
+    "  READS: GiRaFFE_HO::AD2(Interior)\n",
+    "  READS: GiRaFFE_HO::psi6Phi(Interior)\n",
+    "  READS: GiRaFFE_HO::ValenciavU0(Interior)\n",
+    "  READS: GiRaFFE_HO::ValenciavU1(Interior)\n",
+    "  READS: GiRaFFE_HO::ValenciavU2(Interior)\n",
+    "  READS: GiRaFFE_HO::StildeD0(Interior)\n",
+    "  READS: GiRaFFE_HO::StildeD1(Interior)\n",
+    "  READS: GiRaFFE_HO::StildeD2(Interior)\n",
+    "  WRITES: GiRaFFE_HO::AD0(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::AD1(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::AD2(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::psi6Phi(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU0(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU1(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU2(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::StildeD0(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::StildeD1(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::StildeD2(Exterior)\n",
     "} \"Apply boundary conditions\"\n",
     "\n",
     "\n",
@@ -1902,12 +1924,39 @@
     "} \"Register Variables for MoL\"\n",
     "\n",
     "# Nontrivial primitives solve, for vx,vy,vz:\n",
-    "schedule GiRaFFE_HO_conserv_to_prims_FFE in MoL_CalcRHS after HydroBase_to_GiRaFFE before GiRaFFE_HO_set_prereqs\n",
+    "#schedule GiRaFFE_HO_conserv_to_prims_FFE in MoL_CalcRHS after HydroBase_to_GiRaFFE before GiRaFFE_HO_set_GFs_to_finite_difference_for_RHs\n",
+    "#{\n",
+    "#  LANG: C\n",
+    "#} \"Applies the FFE condition B^2>E^2 and recomputes the velocities\"\n",
+    "\n",
+    "# Schedule this AFTER the evolution as well.\n",
+    "schedule GiRaFFE_HO_conserv_to_prims_FFE in HydroBase_Boundaries AFTER driver_A_to_B\n",
     "{\n",
     "  LANG: C\n",
+    "  READS: admbase::gxx(Everywhere)\n",
+    "  READS: admbase::gxy(Everywhere)\n",
+    "  READS: admbase::gxz(Everywhere)\n",
+    "  READS: admbase::gyy(Everywhere)\n",
+    "  READS: admbase::gyz(Everywhere)\n",
+    "  READS: admbase::gzz(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD2(Everywhere)\n",
     "} \"Applies the FFE condition B^2>E^2 and recomputes the velocities\"\n",
     "\n",
-    "schedule HydroBase_to_GiRaFFE IN MoL_CalcRHS before GiRaFFE_HO_set_prereqs\n",
+    "schedule HydroBase_to_GiRaFFE IN MoL_CalcRHS before GiRaFFE_HO_set_GFs_to_finite_difference_for_RHs\n",
     "{\n",
     "  LANG: C\n",
     "  READS: HydroBase::Avec(Everywhere)\n",
@@ -1961,15 +2010,46 @@
     "  WRITES: GiRaFFE_HO::BU2(Everywhere)\n",
     "} \"Calculates the B-field from the vector potential\"\n",
     "\n",
-    "#schedule GiRaFFE_HO_conserv_to_prims_FFE in GiRaFFE_ID_Converter after first_initialdata\n",
-    "#{\n",
-    "#  LANG: C\n",
-    "#} \"Applies the FFE condition B^2>E^2 and recomputes the velocities\"\n",
+    "schedule GiRaFFE_HO_conserv_to_prims_FFE in GiRaFFE_Initial after initial_driver_A_to_B\n",
+    "{\n",
+    "  LANG: C\n",
+    "  READS: admbase::gxx(Everywhere)\n",
+    "  READS: admbase::gxy(Everywhere)\n",
+    "  READS: admbase::gxz(Everywhere)\n",
+    "  READS: admbase::gyy(Everywhere)\n",
+    "  READS: admbase::gyz(Everywhere)\n",
+    "  READS: admbase::gzz(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::BU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::StildeD2(Everywhere)\n",
+    "} \"Applies the FFE condition B^2>E^2 and recomputes the velocities\"\n",
     "\n",
     "# Copy data to other timelevels.\n",
     "#schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in GiRaFFE_PostPostInitial as mhdpostid after initial_driver_A_to_B# after p2c\n",
     "schedule GiRaFFE_HO_PostPostInitial__Copy_Timelevels in SetTmunu as mhdpostid# after initial_driver_A_to_B \n",
     "{\n",
+    "  READS: GiRaFFE_HO::AD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::psi6Phi(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::StildeD2(Everywhere)\n",
     "  LANG: C\n",
     "} \"Compute post-initialdata quantities\"\n",
     "# FIXME: This is getting run too many times, even during the evolution!"
@@ -2062,7 +2142,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 175635 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 176649 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
