Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: fix various issues that arise when REAL != double

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -454,6 +454,18 @@
     "// Step P2: Add needed #define's to set data type, the IDX4() macro, and the gridfunctions\n",
     "// Step P2a: set REAL=double, so that all floating point numbers are stored to at least ~16 significant digits.\n",
     "#define REAL double\n",
+    "/*\n",
+    "#define REAL long double\n",
+    "#define sin sinl\n",
+    "#define cos cosl\n",
+    "#define sinh sinhl\n",
+    "#define cosh coshl\n",
+    "#define log logl\n",
+    "#define log10 log10l\n",
+    "#define exp expl\n",
+    "#define sqrt sqrtl\n",
+    "#define fabs fabsl\n",
+    "*/\n",
     "\n",
     "// Step P3: Set free parameters\n",
     "// Step P3a: Free parameters for the numerical grid\n",
@@ -467,7 +479,7 @@
     "// SinhSpherical coordinates parameters\n",
     "const REAL AMPL    = 400; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
     "//const REAL SINHW   = 0.125; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
-    "const REAL SINHW   = 0.2; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
+    "const REAL SINHW   = 0.2L; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
     "// Cylindrical coordinates parameters\n",
     "const REAL ZMIN   = -7.5;\n",
     "const REAL ZMAX   =  7.5;\n",
