Corrected Exterior to Boundary.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1883,16 +1883,16 @@
     "  READS: GiRaFFE_HO::StildeD0(Interior)\n",
     "  READS: GiRaFFE_HO::StildeD1(Interior)\n",
     "  READS: GiRaFFE_HO::StildeD2(Interior)\n",
-    "  WRITES: GiRaFFE_HO::AD0(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::AD1(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::AD2(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::psi6Phi(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::ValenciavU0(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::ValenciavU1(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::ValenciavU2(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::StildeD0(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::StildeD1(Exterior)\n",
-    "  WRITES: GiRaFFE_HO::StildeD2(Exterior)\n",
+    "  WRITES: GiRaFFE_HO::AD0(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::AD1(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::AD2(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::psi6Phi(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU0(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU1(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::ValenciavU2(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::StildeD0(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::StildeD1(Boundary)\n",
+    "  WRITES: GiRaFFE_HO::StildeD2(Boundary)\n",
     "} \"Apply boundary conditions\"\n",
     "\n",
     "\n",
@@ -1927,6 +1927,27 @@
     "#schedule GiRaFFE_HO_conserv_to_prims_FFE in MoL_CalcRHS after HydroBase_to_GiRaFFE before GiRaFFE_HO_set_GFs_to_finite_difference_for_RHs\n",
     "#{\n",
     "#  LANG: C\n",
+    "#  READS: admbase::gxx(Everywhere)\n",
+    "#  READS: admbase::gxy(Everywhere)\n",
+    "#  READS: admbase::gxz(Everywhere)\n",
+    "#  READS: admbase::gyy(Everywhere)\n",
+    "#  READS: admbase::gyz(Everywhere)\n",
+    "#  READS: admbase::gzz(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::BU0(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::BU1(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::BU2(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "#  READS: GiRaFFE_HO::StildeD2(Everywhere)\n",
+    "#  WRITES: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
+    "#  WRITES: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
+    "#  WRITES: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
+    "#  WRITES: GiRaFFE_HO::StildeD0(Everywhere)\n",
+    "#  WRITES: GiRaFFE_HO::StildeD1(Everywhere)\n",
+    "#  WRITES: GiRaFFE_HO::StildeD2(Everywhere)\n",
     "#} \"Applies the FFE condition B^2>E^2 and recomputes the velocities\"\n",
     "\n",
     "# Schedule this AFTER the evolution as well.\n",
