ADM_to_BSSN: fix psi4 derivs; finite_difference.py: add KO support; Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: add KO

--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -220,29 +220,36 @@
    "outputs": [],
    "source": [
     "# Step 2.a: Derivatives of $e^{4\\phi}$\n",
-    "exp4phidD = ixp.zerorank1()\n",
-    "exp4phidDD = ixp.zerorank2()\n",
+    "phidD = ixp.zerorank1()\n",
+    "phidDD = ixp.zerorank2()\n",
     "cf_dD  = ixp.declarerank1(\"cf_dD\")\n",
     "cf_dDD = ixp.declarerank2(\"cf_dDD\",\"sym01\")\n",
     "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
     "    for i in range(DIM):\n",
-    "        exp4phidD[i]  = cf_dD[i]\n",
+    "        phidD[i]  = cf_dD[i]\n",
     "        for j in range(DIM):\n",
-    "            exp4phidDD[i][j] = cf_dDD[i][j]\n",
+    "            phidDD[i][j] = cf_dDD[i][j]\n",
     "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
     "    for i in range(DIM):\n",
-    "        exp4phidD[i]  = -sp.Rational(1,4)*exp4phi*cf_dD[i]\n",
+    "        phidD[i]  = -sp.Rational(1,4)*exp4phi*cf_dD[i]\n",
     "        for j in range(DIM):\n",
-    "            exp4phidDD[i][j] = sp.Rational(1,4)*( exp4phi**2*cf_dD[i]*cf_dD[j] - exp4phi*cf_dDD[i][j] )\n",
+    "            phidDD[i][j] = sp.Rational(1,4)*( exp4phi**2*cf_dD[i]*cf_dD[j] - exp4phi*cf_dDD[i][j] )\n",
     "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
     "    exp2phi = (1 / cf)\n",
     "    for i in range(DIM):\n",
-    "        exp4phidD[i]  = -sp.Rational(1,2)*exp2phi*cf_dD[i]\n",
+    "        phidD[i]  = -sp.Rational(1,2)*exp2phi*cf_dD[i]\n",
     "        for j in range(DIM):\n",
-    "            exp4phidDD[i][j] = sp.Rational(1,2)*( exp4phi*cf_dD[i]*cf_dD[j] - exp2phi*cf_dDD[i][j] )\n",
+    "            phidDD[i][j] = sp.Rational(1,2)*( exp4phi*cf_dD[i]*cf_dD[j] - exp2phi*cf_dDD[i][j] )\n",
     "else:\n",
     "    print(\"Error ConformalFactor type = \\\"\"+par.parval_from_str(\"ConformalFactor\")+\"\\\" unknown.\")\n",
-    "    exit(1)"
+    "    exit(1)\n",
+    "\n",
+    "exp4phidD  = ixp.zerorank1()\n",
+    "exp4phidDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    exp4phidD[i] = 4*exp4phi*phidD[i]\n",
+    "    for j in range(DIM):\n",
+    "        exp4phidDD[i][j] = 16*exp4phi*phidD[i]*phidD[j] + 4*exp4phi*phidDD[i][j]"
    ]
   },
   {
@@ -468,7 +475,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_in_terms_of_BSSN.ipynb to latex\n",
-      "[NbConvertApp] Writing 53176 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
+      "[NbConvertApp] Writing 54059 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
