--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -164,11 +164,34 @@
     "rhs.BSSN_RHSs()\n",
     "gaugerhs.BSSN_gauge_RHSs()\n",
     "\n",
+    "thismodule = __name__\n",
+    "diss_strength = par.Cparameters(\"REAL\", thismodule, \"diss_strength\")\n",
+    "\n",
+    "alpha_dKOD = ixp.declarerank1(\"alpha_dKOD\")\n",
+    "cf_dKOD    = ixp.declarerank1(\"cf_dKOD\")\n",
+    "trK_dKOD   = ixp.declarerank1(\"trK_dKOD\")\n",
+    "betU_dKOD    = ixp.declarerank2(\"betU_dKOD\",\"nosym\")\n",
+    "vetU_dKOD    = ixp.declarerank2(\"vetU_dKOD\",\"nosym\")\n",
+    "lambdaU_dKOD = ixp.declarerank2(\"lambdaU_dKOD\",\"nosym\")\n",
+    "aDD_dKOD = ixp.declarerank3(\"aDD_dKOD\",\"sym01\")\n",
+    "hDD_dKOD = ixp.declarerank3(\"hDD_dKOD\",\"sym01\")\n",
+    "for k in range(DIM):\n",
+    "    gaugerhs.alpha_rhs += diss_strength*alpha_dKOD[k]\n",
+    "    rhs.cf_rhs         += diss_strength*   cf_dKOD[k]\n",
+    "    rhs.trK_rhs        += diss_strength*  trK_dKOD[k]\n",
+    "    for i in range(DIM):\n",
+    "        gaugerhs.bet_rhsU[i] += diss_strength*   betU_dKOD[i][k]\n",
+    "        gaugerhs.vet_rhsU[i] += diss_strength*   vetU_dKOD[i][k]\n",
+    "        rhs.lambda_rhsU[i]   += diss_strength*lambdaU_dKOD[i][k]\n",
+    "        for j in range(DIM):\n",
+    "            rhs.a_rhsDD[i][j] += diss_strength*aDD_dKOD[i][j][k]\n",
+    "            rhs.h_rhsDD[i][j] += diss_strength*hDD_dKOD[i][j][k]\n",
+    "\n",
     "def BSSN_RHSs():\n",
     "\n",
     "    print(\"Generating C code for BSSN RHSs in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
     "    start = time.time()\n",
-    "\n",
+    "    \n",
     "    BSSN_evol_rhss = [ \\\n",
     "                      lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"aDD00\"),rhs=rhs.a_rhsDD[0][0]),\n",
     "                      lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"aDD01\"),rhs=rhs.a_rhsDD[0][1]),\n",
@@ -211,7 +234,12 @@
     "                                          \"#pragma omp parallel for\",\n",
     "                                          \"    const REAL xx2 = xx[2][i2];\",\n",
     "                                          \"        const REAL xx1 = xx[1][i1];\"],\"\",\n",
-    "                                         \"const REAL xx0 = xx[0][i0];\\n\"+BSSN_RHSs_string))"
+    "                                         \"\"\"\n",
+    "const REAL xx0 = xx[0][i0];\n",
+    "#define ERF(X, X0, W) (0.5 * (erf( ( (X) - (X0) ) / (W) ) + 1.0))\n",
+    "REAL xCart[3];\n",
+    "#include \"../CurviBoundaryConditions/xxCart.h\"\n",
+    "const REAL diss_strength = ERF(sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]),2.0L,0.17L)*0.99L;\\n\"\"\"+BSSN_RHSs_string))"
    ]
   },
   {
@@ -269,7 +297,6 @@
     "BP4.Psi4()\n",
     "\n",
     "import BSSN.Psi4_tetrads_Ccode_function as P4C\n",
-    "thismodule = __name__\n",
     "mre4U0,mre4U1,mre4U2,mre4U3 = par.Cparameters(\"REAL\", thismodule, [\"mre4U0\",\"mre4U1\",\"mre4U2\",\"mre4U3\"])\n",
     "mim4U0,mim4U1,mim4U2,mim4U3 = par.Cparameters(\"REAL\", thismodule, [\"mim4U0\",\"mim4U1\",\"mim4U2\",\"mim4U3\"])\n",
     "n4U0,n4U1,n4U2,n4U3 = par.Cparameters(\"REAL\", thismodule, [\"n4U0\",\"n4U1\",\"n4U2\",\"n4U3\"])\n",
@@ -307,12 +334,12 @@
      "text": [
       "Generating C code for BSSN RHSs in SinhSpherical coordinates.\n",
       "Generating C code for BSSN Hamiltonian in SinhSpherical coordinates.\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "Generating C code for Psi4 in SinhSpherical coordinates.\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::AMPL\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::SINHW\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Finished in 53.8759400845 seconds.\n",
+      "Finished in 104.159600973 seconds.\n",
       "Output C implementation of Hamiltonian constraint to BSSN/Hamiltonian.h\n",
       "Wrote to file \"BSSN/Psi4_lowlevel.h\"\n",
       "Finished generating C code for Psi4\n",
@@ -327,7 +354,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::AMPL\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::SINHW\n",
       "Appended to file \"BSSN/Psi4_tetrad.h\"\n",
-      "Finished generating BSSN RHSs in 222.179853916 seconds.\n"
+      "Finished generating BSSN RHSs in 415.422104836 seconds.\n"
      ]
     }
    ],
@@ -439,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing BSSN/BrillLindquist_Playground.c\n"
+      "Overwriting BSSN/BrillLindquist_Playground.c\n"
      ]
     }
    ],
@@ -480,7 +507,7 @@
     "// Spherical coordinates parameter\n",
     "const REAL RMAX    = 75.;\n",
     "// SinhSpherical coordinates parameters\n",
-    "const REAL AMPL    = 400; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
+    "const REAL AMPL    = 300; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
     "//const REAL SINHW   = 0.125; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
     "const REAL SINHW   = 0.2L; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
     "// Cylindrical coordinates parameters\n",
@@ -711,6 +738,94 @@
     "\n",
     "    // Step 4: Integrate the initial data forward in time using the Method of Lines and RK4\n",
     "    for(int n=0;n<=N_final;n++) { // Main loop to progress forward in time.\n",
+    "\n",
+    "    /* Step 3: Output 2D data file, for visualization */\n",
+    "    if(n%N_output_every == 0) {\n",
+    "        char filename[100];\n",
+    "\n",
+    "        //int r_ext_idx = (Nxx_plus_2NGHOSTS[0]-NGHOSTS)/2;\n",
+    "        for(int r_ext_idx = (Nxx_plus_2NGHOSTS[0]-NGHOSTS)/2; r_ext_idx<(Nxx_plus_2NGHOSTS[0]-NGHOSTS)*0.9;r_ext_idx+=5) {\n",
+    "            REAL r_ext;\n",
+    "            {\n",
+    "                REAL xx0 = xx[0][r_ext_idx];\n",
+    "                REAL xx1 = xx[1][1];\n",
+    "                REAL xx2 = xx[2][1];\n",
+    "                REAL xCart[3];\n",
+    "    #include \"xxCart.h\"\n",
+    "                r_ext = sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]);\n",
+    "            }\n",
+    "            sprintf(filename,\"outPsi4-%d-r%.2f-%08d.txt\",Nxx[0],(double)r_ext,n);\n",
+    "            FILE *out2DPsi4 = fopen(filename, \"w\");\n",
+    "            LOOP_REGION(r_ext_idx,r_ext_idx+1, \n",
+    "                        NGHOSTS-1,Nxx_plus_2NGHOSTS[1]-NGHOSTS+1, \n",
+    "                        NGHOSTS-1,Nxx_plus_2NGHOSTS[2]-NGHOSTS+1) {\n",
+    "                psi4(Nxx_plus_2NGHOSTS, i0,i1,i2,  dxx,xx,  evol_gfs,  aux_gfs);\n",
+    "                const int idx = IDX3(i0,i1,i2);\n",
+    "                REAL xx0 = xx[0][i0];\n",
+    "                REAL xx1 = xx[1][i1];\n",
+    "                REAL xx2 = xx[2][i2];\n",
+    "                REAL xCart[3];\n",
+    "    #include \"xxCart.h\"\n",
+    "                REAL r = sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]);\n",
+    "                fprintf(out2DPsi4,\"%e %e %e %e %.15e %.15e\\n\",\n",
+    "                        (double)((n)*dt),\n",
+    "                        (double)r,\n",
+    "                        (double)xx[1][i1],\n",
+    "                        (double)xx[2][i2],\n",
+    "                        (double)aux_gfs[IDX4pt(PSI4RGF,idx)],\n",
+    "                        (double)aux_gfs[IDX4pt(PSI4IGF,idx)]);\n",
+    "            }\n",
+    "            fclose(out2DPsi4);\n",
+    "\n",
+    "            sprintf(filename,\"outPsi4_l2m0-%d-r%.2f.txt\",Nxx[0],(double)r_ext);\n",
+    "            FILE *outPsi4_l2m0;\n",
+    "            if(n==0) outPsi4_l2m0 = fopen(filename, \"w\");\n",
+    "            else     outPsi4_l2m0 = fopen(filename, \"a\");\n",
+    "            REAL Psi4r_l2m0 = 0.0;\n",
+    "            REAL Psi4i_l2m0 = 0.0;\n",
+    "            LOOP_REGION(r_ext_idx,r_ext_idx+1, \n",
+    "                        NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, \n",
+    "                        NGHOSTS,NGHOSTS+1) {\n",
+    "                psi4(Nxx_plus_2NGHOSTS, i0,i1,i2,  dxx,xx,  evol_gfs,  aux_gfs);\n",
+    "                const int idx = IDX3(i0,i1,i2);\n",
+    "                // Based on http://www.demonstrations.wolfram.com/SpinWeightedSphericalHarmonics/\n",
+    "                // we have {}_{s}_Y_{lm} = {}_{-2}_Y_{20} = 1/4 * sqrt(15 / (2*pi)) * sin(th)^2\n",
+    "                // Confirm integrand is correct:\n",
+    "                // Integrate[(1/4 Sqrt[15/(2 \\[Pi])] Sin[th]^2) (1/4 Sqrt[15/(2 \\[Pi])] Sin[th]^2)*2*Pi*Sin[th], {th, 0, Pi}]\n",
+    "                // ^^^ equals 1.\n",
+    "                REAL sinth = sin(xx[1][i1]);\n",
+    "                /*             psi4                       *   {}_{-2}_Y_{20}                            * (int dphi) * sinth*dtheta */\n",
+    "                Psi4r_l2m0 += aux_gfs[IDX4pt(PSI4RGF,idx)]*(0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth) * (2*M_PI) * sinth*dxx[1];\n",
+    "                Psi4i_l2m0 += aux_gfs[IDX4pt(PSI4IGF,idx)]*(0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth) * (2*M_PI) * sinth*dxx[1];\n",
+    "            }\n",
+    "            fprintf(outPsi4_l2m0,\"%e %.15e %.15e\\n\", (double)((n)*dt), (double)Psi4r_l2m0,(double)Psi4i_l2m0);\n",
+    "            fclose(outPsi4_l2m0);\n",
+    "        }            \n",
+    "        // Evaluate Hamiltonian constraint violation\n",
+    "        Hamiltonian_constraint(Nxx,Nxx_plus_2NGHOSTS,dxx, xx, evol_gfs, aux_gfs);\n",
+    "\n",
+    "//        const int i1mid = Nxx_plus_2NGHOSTS[1]/2;\n",
+    "        sprintf(filename,\"out1D-%d.txt\",Nxx[0],n);\n",
+    "        FILE *out2D;\n",
+    "        if(n==0) out2D = fopen(filename, \"w\");\n",
+    "        else out2D = fopen(filename, \"a\");\n",
+    "        LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, \n",
+    "                    Nxx_plus_2NGHOSTS[1]/2,Nxx_plus_2NGHOSTS[1]/2+1, \n",
+    "                    Nxx_plus_2NGHOSTS[2]/2,Nxx_plus_2NGHOSTS[2]/2+1) {\n",
+    "            const int idx = IDX3(i0,i1,i2);\n",
+    "            REAL xx0 = xx[0][i0];\n",
+    "            REAL xx1 = xx[1][i1];\n",
+    "            REAL xx2 = xx[2][i2];\n",
+    "            REAL xCart[3];\n",
+    "#include \"xxCart.h\"\n",
+    "            fprintf(out2D,\"%e %e %e\\n\",\n",
+    "                    (double)sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]),\n",
+    "                    (double)evol_gfs[IDX4pt(CFGF,idx)],(double)log10(fabs(aux_gfs[IDX4pt(HGF,idx)])));\n",
+    "        }\n",
+    "        fprintf(out2D,\"\\n\\n\");\n",
+    "        fclose(out2D);\n",
+    "    }\n",
+    "                                 \n",
     "    /***************************************************/\n",
     "    /* Implement RK4 for Method of Lines timestepping: */\n",
     "    /***************************************************/\n",
@@ -759,87 +874,6 @@
     "    apply_bcs(Nxx, Nxx_plus_2NGHOSTS, bc_gz_map,bc_parity_conditions,NUM_EVOL_GFS,evol_gf_parity, evol_gfs);\n",
     "    enforce_detgammabar_constraint(Nxx_plus_2NGHOSTS, xx, evol_gfs);\n",
     "\n",
-    "    /* Step 3: Output 2D data file, for visualization */\n",
-    "    if(n%N_output_every == 0) {\n",
-    "        char filename[100];\n",
-    "\n",
-    "        //int r_ext_idx = (Nxx_plus_2NGHOSTS[0]-NGHOSTS)/2;\n",
-    "        for(int r_ext_idx = (Nxx_plus_2NGHOSTS[0]-NGHOSTS)/2; r_ext_idx<(Nxx_plus_2NGHOSTS[0]-NGHOSTS)*0.9;r_ext_idx+=5) {\n",
-    "            REAL r_ext;\n",
-    "            {\n",
-    "                REAL xx0 = xx[0][r_ext_idx];\n",
-    "                REAL xx1 = xx[1][1];\n",
-    "                REAL xx2 = xx[2][1];\n",
-    "                REAL xCart[3];\n",
-    "    #include \"xxCart.h\"\n",
-    "                r_ext = sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]);\n",
-    "            }\n",
-    "            sprintf(filename,\"outPsi4-%d-r%.2f-%08d.txt\",Nxx[0],(double)r_ext,n);\n",
-    "            FILE *out2DPsi4 = fopen(filename, \"w\");\n",
-    "            LOOP_REGION(r_ext_idx,r_ext_idx+1, \n",
-    "                        NGHOSTS-1,Nxx_plus_2NGHOSTS[1]-NGHOSTS+1, \n",
-    "                        NGHOSTS-1,Nxx_plus_2NGHOSTS[2]-NGHOSTS+1) {\n",
-    "                psi4(Nxx_plus_2NGHOSTS, i0,i1,i2,  dxx,xx,  evol_gfs,  aux_gfs);\n",
-    "                const int idx = IDX3(i0,i1,i2);\n",
-    "                REAL xx0 = xx[0][i0];\n",
-    "                REAL xx1 = xx[1][i1];\n",
-    "                REAL xx2 = xx[2][i2];\n",
-    "                REAL xCart[3];\n",
-    "    #include \"xxCart.h\"\n",
-    "                REAL r = sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]);\n",
-    "                fprintf(out2DPsi4,\"%e %e %e %e %.15e %.15e\\n\",\n",
-    "                        (double)((n+1)*dt),\n",
-    "                        (double)r,\n",
-    "                        (double)xx[1][i1],\n",
-    "                        (double)xx[2][i2],\n",
-    "                        (double)aux_gfs[IDX4pt(PSI4RGF,idx)],\n",
-    "                        (double)aux_gfs[IDX4pt(PSI4IGF,idx)]);\n",
-    "            }\n",
-    "            fclose(out2DPsi4);\n",
-    "\n",
-    "            sprintf(filename,\"outPsi4_l2m0-%d-r%.2f.txt\",Nxx[0],(double)r_ext);\n",
-    "            FILE *outPsi4_l2m0;\n",
-    "            if(n==0) outPsi4_l2m0 = fopen(filename, \"w\");\n",
-    "            else     outPsi4_l2m0 = fopen(filename, \"a\");\n",
-    "            REAL Psi4r_l2m0 = 0.0;\n",
-    "            REAL Psi4i_l2m0 = 0.0;\n",
-    "            LOOP_REGION(r_ext_idx,r_ext_idx+1, \n",
-    "                        NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, \n",
-    "                        NGHOSTS,NGHOSTS+1) {\n",
-    "                psi4(Nxx_plus_2NGHOSTS, i0,i1,i2,  dxx,xx,  evol_gfs,  aux_gfs);\n",
-    "                const int idx = IDX3(i0,i1,i2);\n",
-    "                // Based on http://www.demonstrations.wolfram.com/SpinWeightedSphericalHarmonics/\n",
-    "                // we have {}_{s}_Y_{lm} = {}_{-2}_Y_{20} = 1/4 * sqrt(15 / (2*pi)) * sin(th)^2\n",
-    "                // Confirm integrand is correct:\n",
-    "                // Integrate[(1/4 Sqrt[15/(2 \\[Pi])] Sin[th]^2) (1/4 Sqrt[15/(2 \\[Pi])] Sin[th]^2)*2*Pi*Sin[th], {th, 0, Pi}]\n",
-    "                // ^^^ equals 1.\n",
-    "                REAL sinth = sin(xx[1][i1]);\n",
-    "                /*             psi4                       *   {}_{-2}_Y_{20}                            * (int dphi) * sinth*dtheta */\n",
-    "                Psi4r_l2m0 += aux_gfs[IDX4pt(PSI4RGF,idx)]*(0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth) * (2*M_PI) * sinth*dxx[1];\n",
-    "                Psi4i_l2m0 += aux_gfs[IDX4pt(PSI4IGF,idx)]*(0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth) * (2*M_PI) * sinth*dxx[1];\n",
-    "            }\n",
-    "            fprintf(outPsi4_l2m0,\"%e %.15e %.15e\\n\", (double)((n+1)*dt), (double)Psi4r_l2m0,(double)Psi4i_l2m0);\n",
-    "            fclose(outPsi4_l2m0);\n",
-    "        }            \n",
-    "        // Evaluate Hamiltonian constraint violation\n",
-    "        Hamiltonian_constraint(Nxx,Nxx_plus_2NGHOSTS,dxx, xx, evol_gfs, aux_gfs);\n",
-    "\n",
-    "//        const int i1mid = Nxx_plus_2NGHOSTS[1]/2;\n",
-    "        sprintf(filename,\"out%d-%08d.txt\",Nxx[0],n);\n",
-    "        FILE *out2D = fopen(filename, \"w\");\n",
-    "        LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[2]-NGHOSTS) {\n",
-    "            const int idx = IDX3(i0,i1,i2);\n",
-    "            REAL xx0 = xx[0][i0];\n",
-    "            REAL xx1 = xx[1][i1];\n",
-    "            REAL xx2 = xx[2][i2];\n",
-    "            REAL xCart[3];\n",
-    "#include \"xxCart.h\"\n",
-    "            fprintf(out2D,\"%e %e %e %e\\n\",\n",
-    "                    (double)xCart[1],(double)xCart[2],\n",
-    "                    (double)evol_gfs[IDX4pt(CFGF,idx)],(double)log10(fabs(aux_gfs[IDX4pt(HGF,idx)])));\n",
-    "        }\n",
-    "        fclose(out2D);\n",
-    "    }\n",
     "    /* Validation: Output Hamiltonian constraint violation */\n",
     "    if(n==N_final-1) {\n",
     "        // Evaluate Hamiltonian constraint violation\n",
@@ -899,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,15 +969,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mDEPRECATION: A future version of pip will drop support for Python 2.7.\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install scipy > /dev/null"
    ]
