--- a/Tutorial-Psi4.ipynb
+++ b/Tutorial-Psi4.ipynb
@@ -333,7 +333,7 @@
     "&= \\gamma^{im} K_{im}\n",
     "\\end{align}\n",
     "\n",
-    "First let's build the first term in parentheses"
+    "Let's build the components of this term: $R_{jl}$, $K^p_l$, and $K$, as defined above:"
    ]
   },
   {
@@ -344,21 +344,38 @@
    "source": [
     "# Step 5: Construct the (rank-2) tensor in term 3 of psi_4 (referring to Eq 5.1 in \n",
     "#   Baker, Campanelli, Lousto (2001); https://arxiv.org/pdf/gr-qc/0104063.pdf\n",
-    "rank2term3 = ixp.zerorank2()\n",
-    "gammaUU = AB.gammaUU\n",
     "\n",
+    "# Step 5.1: Construct 3-Ricci tensor R_{ij} = gamma^{im} R_{ijml}\n",
+    "RDD = ixp.zerorank2()\n",
+    "gammaUU, detgamma = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
     "        for i in range(DIM):\n",
     "            for m in range(DIM):\n",
-    "                rank2term3[j][l] += gammaUU[i][m]*RDDDD[i][j][m][l]"
+    "                RDD[j][l] += gammaUU[i][m]*RDDDD[i][j][m][l]\n",
+    "\n",
+    "# Step 5.2: Construct K^p_l = gamma^{pi} K_{il}\n",
+    "KUD = ixp.zerorank2()\n",
+    "for p in range(DIM):\n",
+    "    for l in range(DIM):\n",
+    "        for i in range(DIM):\n",
+    "            KUD[p][l] += gammaUU[p][i]*KDD[i][l]\n",
+    "\n",
+    "# Step 5.3: Construct trK = gamma^{ij} K_{ij}\n",
+    "trK = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        trK += gammaUU[i][j]*KDD[i][j]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... then we add on the second term in parentheses, where $K^p_l = \\gamma^{mp} K_{ml}$"
+    "Next we put these terms together to construct the entire term:\n",
+    "$$\n",
+    "+4 \\left(R_{jl} - K_{jp} K^p_l + K K_{jl} \\right),\n",
+    "$$"
    ]
   },
   {
@@ -367,33 +384,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... then we add on the second term in parentheses, where $K^p_l = \\gamma^{mp} K_{ml}$\n",
+    "# Next we put these terms together to construct the entire term in parentheses:\n",
+    "# +4 \\left(R_{jl} - K_{jp} K^p_l + K K_{jl} \\right),\n",
+    "rank2term3 = ixp.zerorank2()\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
-    "        for m in range(DIM):\n",
-    "            for p in range(DIM):\n",
-    "                rank2term3[j][l] += - KDD[j][p]*gammaUU[p][m]*KDD[m][l]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally we add the third term in parentheses, and multiply all terms by $+4$:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Finally we add the third term in parentheses, and multiply all terms by $+4$:\n",
-    "for j in range(DIM):\n",
-    "    for l in range(DIM):\n",
-    "        for i in range(DIM):\n",
-    "            for m in range(DIM):\n",
-    "                rank2term3[j][l] += gammaUU[i][m]*KDD[i][m]*KDD[j][l]\n",
+    "        rank2term3[j][l] = RDD[j][l] + trK*KDD[j][l]\n",
+    "        for p in range(DIM):\n",
+    "            rank2term3[j][l] += - KDD[j][p]*KUD[p][l]\n",
+    "# Finally we multiply by +4:\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
     "        rank2term3[j][l] *= sp.sympify(4)"
@@ -443,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +565,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4.ipynb to latex\n",
-      "[NbConvertApp] Writing 55152 bytes to Tutorial-Psi4.tex\n",
+      "[NbConvertApp] Writing 56473 bytes to Tutorial-Psi4.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
